<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfb784"
    tools:context="com.example.android.hotelcard.MainActivity">

    <ImageView
        android:id="@+id/logo_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_pic"
        android:text="@string/header"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#f0d8b6"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:padding="4dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="#fef3df" />
    
    <TextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:background="#fef3df"
        android:text="@string/button"
        android:textAlignment="center"
        android:textColor="#f0d8b6"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:orientation="vertical"
        android:paddingLeft="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:src="@drawable/address" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/address"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fef3df" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/phone"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fef3df" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autoLink="email"
                android:text="@string/mail"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColorLink="#fef3df" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:src="@drawable/website" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autoLink="web"
                android:text="@string/web"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColorLink="#fef3df" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>